--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -1,3 +1,37 @@
+.control{
+    & > label{
+        & > input[type="checkbox"] {
+            visibility: hidden;
+            opacity: 0;
+        }
+
+        & > span{
+            position: relative;
+            padding-left: 5px;
+
+            &:after{
+                position: absolute;
+                top: -2px;
+                left: -16px;
+                display: block;
+                content: "";
+            }
+
+            &:after{
+                font-family: "Font Awesome 6 Pro";
+                font-weight: 500;
+                content: "\f0c8";
+            }
+        }
+
+        & > input[type="checkbox"]:checked + span{
+            &:after{
+                content: "\f14a";
+            }
+        }
+    }
+}
+
 .branch-google-map-image{
     img{
         max-width: 600px;
