--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -4,7 +4,7 @@
     {% set gallery_images = post.get_field('ng_gallery') %}
     {% set contacts = post.get_field('nh_contacts') %}
     {% set features = post.get_field('nh_features') %}
-    {% set cta_list = post.get_field('nh_cta') %}
+    {% set cta_list = fn('get_field','section_new_homes_cta','option') %}
     {% set similar_new_homes = post.get_field('similar_new_homes') %}
 
     <section class="page-section page-section--padding50 pb-0 section-gallery-images">
@@ -168,10 +168,10 @@
 
                         <div class="col-md-6 {% if not loop.first %}mt-4 mt-md-0{% endif %}">
                             <div class="new-home-cta-block text-center">
-                                <a class="new-home-cta-block--thumb-link" href="{{ cta_item.link.url }}"><img src="{{ cta_item.image }}"></a>
+                                <a class="new-home-cta-block--thumb-link" href="{{ cta_item.link.url }}" {% if cta_item.link.target %}target="_blank" {% endif%}><img src="{{ cta_item.image_url }}"></a>
                                 <div class="new-home-cta-block--content">
                                     <h4 class="text-uppercase">{{ cta_item.title }}</h4>
-                                    {{ cta_item.short_description }}
+                                    {{ cta_item.short_description | wpautop }}
                                     {% include 'components/parts/link.twig' with {
                                         link: cta_item.link,
                                         css_class: 'btn btn-lg btn-secondary text-uppercase'
