--- a/src/sass/essential/breakpoints/_480.scss
+++ b/src/sass/essential/breakpoints/_480.scss
@@ -10,4 +10,14 @@
             }
         }
     }
+
+    #footer{
+        .footer-widgets{
+            .footer-supported-brands{
+                ul{
+                    display: flex;
+                }
+            }
+        }
+    }
 }
