--- a/src/sass/essential/breakpoints/_480.scss
+++ b/src/sass/essential/breakpoints/_480.scss
@@ -20,4 +20,20 @@
             }
         }
     }
+
+    .section-property-calculator{
+        &--inner{
+            .property-calculators-wrapper{
+                ul.nav{
+                    li{
+                        a{
+                            padding: 10px;
+                            font-size: 11px;
+                            height: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
