--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -455,4 +455,10 @@
             }
         }
     }
+
+    .property-search-map-view{
+        padding: 0;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
 }
