--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -114,6 +114,10 @@
                 padding: 30px 15px;
             }
         }
+
+        & + .page-section--padding50{
+            margin-top: -45px;
+        }
     }
 
     .section-cta-carousel {
@@ -453,6 +457,10 @@
                     }
                 }
             }
+        }
+
+        & + .page-section--padding50{
+            margin-top: -30px;
         }
     }
 
