--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -51,7 +51,7 @@
                             <div class="col-md-7">
                                 <h1>{{ post.title }}</h1>
                             </div>
-                            <div class="col-md-5 d-flex justify-content-md-end">
+                            <div class="col-md-5 d-flex justify-content-md-end mt-3 mt-sm-0">
                                 <div class="price-block">
                                     {% if post.nh_price is numeric %}
                                         <div class="price-block--from">Prices From</div>
