--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -190,7 +190,7 @@
 
     {% if similar_new_homes %}
 
-        <section class="page-section page-section--padding50">
+        <section class="page-section page-section--padding50 section-new-home-similar-properties">
             <div class="container">
                 <div class="page-section--heading text-center text-md-left">
                     <h3 class="text-uppercase">Similar New Homes</h3>
@@ -200,7 +200,7 @@
 
                     {% for item in similar_new_homes %}
 
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 {{ loop.index > 1 ? 'mt-4 mt-md-0' : '' }} {{ loop.index == 3 ? 'd-none d-md-block' : '' }}">
 
                             {% include 'components/global/new-home.twig' with {
                                 post: item
