--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -11,6 +11,11 @@
         h2{
             font-size: 22px;
         }
+
+        ol,
+        ul{
+            padding-left: 17px;
+        }
     }
 
     .page-section{
