--- a/templates/single.twig
+++ b/templates/single.twig
@@ -25,7 +25,7 @@
                                         {{ category_links }}
                                     {% endif %}
                                 </div>
-                                <div class="article-body">
+                                <div class="article-body content-clear">
                                     {{post.content}}
                                 </div>
                             </section>
