--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -485,6 +485,14 @@
             }
         }
     }
+
+    .section-block-links{
+        .block-links-wrapper{
+            .item-block-link{
+                margin-bottom: 50px;
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 768px) {
