--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -502,4 +502,10 @@
             display: block;
         }
     }
+
+    #my-account-saved_searches{
+        & > div{
+            padding: 15px;
+        }
+    }
 }
