--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -508,4 +508,10 @@
             padding: 15px;
         }
     }
+
+    .propertyhive-my-account{
+        .my-account-sections{
+            margin-bottom: -30px;
+        }
+    }
 }
