--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -467,6 +467,9 @@
         }
 
         .my-account-sections{
+            margin-left: -15px;
+            margin-right: -15px;
+            margin-bottom: -40px;
             padding: 15px;
 
             &:before{
