--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -263,6 +263,8 @@
 
     .section-valuation-types{
         .valuation-type-block{
+            padding: 15px;
+
             h3{
                 font-size: 16px;
                 margin-bottom: 20px;
