allen chat fixes

--- a/components/popups/branch-contact.twig
+++ b/components/popups/branch-contact.twig
@@ -27,7 +27,7 @@
             <input type="email" name="email_address" value="" class="form-control">
         </div>
         <div class="form-group">
-            <label>Enquiry details</label>
+            <label>Further information</label>
             <textarea name="enquiry_text" class="form-control"></textarea>
         </div>
         <div class="text-center">
