new homes similar properties rename to featured properties

--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -193,7 +193,7 @@
         <section class="page-section page-section--padding50 section-new-home-similar-properties">
             <div class="container">
                 <div class="page-section--heading text-center text-md-left">
-                    <h3 class="text-uppercase">Similar New Homes</h3>
+                    <h3 class="text-uppercase">Featured Properties</h3>
                 </div>
 
                 <div class="row">
