--- a/templates/propertyhive/global/search-form-hero_search.twig
+++ b/templates/propertyhive/global/search-form-hero_search.twig
@@ -1,7 +1,7 @@
 <nav class="property-search-department-tabs">
     <ul>
-        <li class="active"><a href="javascript:;" data-change-department data-department="residential-sales">Homes For Sale</a></li>
-        <li><a href="javascript:;" data-change-department data-department="residential-lettings">Homes To Rent</a></li>
+        <li class="active"><a href="javascript:;" data-change-department data-department="residential-sales">Property For Sale</a></li>
+        <li><a href="javascript:;" data-change-department data-department="residential-lettings">Property To Rent</a></li>
         <li><a href="{{ options.page_url.commercial_properties }}" target="_blank">Commercial Property</a></li>
     </ul>
 </nav>
