--- a/templates/propertyhive/global/search-form-hero_search.twig
+++ b/templates/propertyhive/global/search-form-hero_search.twig
@@ -2,7 +2,7 @@
     <ul>
         <li class="active"><a href="javascript:;" data-change-department data-department="residential-sales">Property For Sale</a></li>
         <li><a href="javascript:;" data-change-department data-department="residential-lettings">Property To Rent</a></li>
-        <li><a href="{{ options.page_url.commercial_properties }}" target="_blank">Commercial Property</a></li>
+        <li><a href="{{ options.page_url.commercial_properties }}">Commercial Property</a></li>
     </ul>
 </nav>
 <form name="ph_property_search" class="property-search-form property-search-form-{{form_id}} clear" action="{{property_archive_link}}" method="get" role="form">
