--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -213,6 +213,8 @@
     .single-sa_branch{
         .branch-contact-details{
             &--contacts{
+                font-size: 15px;
+
                 .contact-emails{
                     .btn{
                         padding: 10px 0.6rem;
