--- a/src/sass/essential/pages/_branch-detail.scss
+++ b/src/sass/essential/pages/_branch-detail.scss
@@ -14,7 +14,7 @@
 
         &--contacts{
             box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-            font-size: 14px;
+            font-size: 17px;
             line-height: 1.7;
             color: $support-color2;
 
@@ -33,16 +33,20 @@
                 color: $brand-main-blue;
 
                 li{
-                    i{
+                    &,
+                    a{
                         color: $brand-main-red;
+                    }
+
+                    i{
                         margin-right: 5px;
                     }
 
                     a{
-                        text-decoration: none!important;
+                        text-decoration: none;
 
                         &:hover{
-                            color: $brand-main-red;
+                            text-decoration: underline;
                         }
                     }
                 }
