--- a/templates/single-branch.twig
+++ b/templates/single-branch.twig
@@ -68,8 +68,8 @@
                 <div class="col-md-7">
                     <div class="content-clear">{{ post.branch_property_expertise | wpautop }}</div>
                 </div>
-                <div class="col-lg-4 offset-lg-1 col-md-5">
-                    <div class="arrange-viewing-box-wrap">
+                <div class="col-lg-4 offset-lg-1 col-md-5 mt-4 mt-md-0">
+                    {#<div class="arrange-viewing-box-wrap">#}
                         <div id="property-arrange-viewing" class="branch-opening-hours-block">
 
                             {% if opening_hours %}
@@ -107,8 +107,8 @@
                             {% endif %}
 
                         </div>
-                        <a href="#property-arrange-viewing" data-action="mobileArrangeViewingToggle" class="btn btn-block btn-lg btn-primary btn-mobile-arrange-viewing text-uppercase" data-open_text="Opening Hours" data-close_text="Close"><i class="fas fa-times" aria-hidden="true"></i> <span>Opening Hours</span></a>
-                    </div>
+                        {#<a href="#property-arrange-viewing" data-action="mobileArrangeViewingToggle" class="btn btn-block btn-lg btn-primary btn-mobile-arrange-viewing text-uppercase" data-open_text="Opening Hours" data-close_text="Close"><i class="fas fa-times" aria-hidden="true"></i> <span>Opening Hours</span></a>
+                    </div>#}
                 </div>
             </div>
         </div>
