--- a/templates/propertyhive/property-detail/tabs-content.twig
+++ b/templates/propertyhive/property-detail/tabs-content.twig
@@ -34,7 +34,7 @@
                 <h3 class="tab-pane-hidden-title">Description</h3>
                 <div class="property-detail-description-wrapper">
                     <div class="row">
-                        <div class="col-xl-4 offset-xl-1 order-xl-2">
+                        <div class="col-xl-4 offset-xl-1 order-lg-2 col-lg-4">
                             {% if department == 'residential-lettings' %}
                                 <div class="property-rent-details">
                                     <h3 class="text-uppercase">Letting Details</h3>
@@ -54,7 +54,7 @@
 
                             {{ fn('propertyhive_template_single_features') }}
                         </div>
-                        <div class="col-xl-7 order-xl-1">
+                        <div class="col-xl-7 order-lg-1 col-lg-8 mt-3 mt-sm-5 mt-lg-0">
                             {{ fn('propertyhive_template_single_description') }}
                         </div>
                     </div>
