--- a/templates/propertyhive/shortcode/similar-properties.twig
+++ b/templates/propertyhive/shortcode/similar-properties.twig
@@ -3,7 +3,7 @@
         <div class="page-section--heading text-center text-md-left">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <h3 class="text-uppercase">SIMILAR PROPERTIES In This Area</h3>
+                    <h3 class="text-uppercase">YOU MIGHT ALSO LIKE</h3>
                 </div>
                 <div class="col-md-4 text-md-right mt-3 mt-md-0">
                     {% include 'components/parts/link.twig' with {
