--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -396,6 +396,12 @@
                         transform: translateY(-50%) rotate(180deg);
                     }
                 }
+
+                .container{
+                    &:before{
+                        content: "Click here to ";
+                    }
+                }
             }
 
             &--contacts{
