--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -20,9 +20,10 @@
 
         <nav class="footer-supported-brands">
             <ul>
-                <li><img src="{{ theme.link }}/dist/images/footer-logo1.svg"></li>
-                <li><img src="{{ theme.link }}/dist/images/footer-logo2.svg"></li>
-                <li><img src="{{ theme.link }}/dist/images/footer-logo3.svg"></li>
+                <li><a target="_blank" href="https://www.mydeposits.co.uk/"><img src="{{ theme.link }}/dist/images/footer-logo1.svg"></a></li>
+                <li><a target="_blank" href="https://www.propertymark.co.uk/find-an-expert.html?q=stirling+ackroyd&property_badge="><img src="{{ theme.link }}/dist/images/footer-logo2.svg"></a></li>
+                <li><a target="_blank" href="https://www.tpos.co.uk/find-a-member"><img src="{{ theme.link }}/dist/images/footer-logo3.svg"></a></li>
+                <li><img src="{{ theme.link }}/dist/images/Trading_standards.svg"></li>
             </ul>
         </nav>
     </div>
