--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -171,6 +171,12 @@
                 }
             }
         }
+
+        .footer-supported-brands{
+            ul{
+                display: flex;
+            }
+        }
     }
 
     .section-home-hero{
