--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -143,6 +143,7 @@
                 .current-location{
                     bottom: 4px!important;
                     right: 0!important;
+                    opacity: 0.3;
 
                     img{
                         width: 17px;
