--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -516,4 +516,12 @@
             margin-bottom: -30px;
         }
     }
+
+    .single-sa_branch{
+        .section-page-top{
+            &--image-wrap{
+                display: none;
+            }
+        }
+    }
 }
