content image section link arrow white color

--- a/src/sass/essential/sections/_content-image.scss
+++ b/src/sass/essential/sections/_content-image.scss
@@ -23,6 +23,14 @@
                 }
             }
         }
+
+        .shortcode-link-arrow{
+            color: #FFF;
+
+            &:hover{
+                color: $brand-main-red;
+            }
+        }
     }
 
     &--image-wrap{
