content image section link arrow white color - remove underline

--- a/src/sass/essential/sections/_content-image.scss
+++ b/src/sass/essential/sections/_content-image.scss
@@ -29,6 +29,7 @@
 
             &:hover{
                 color: $brand-main-red;
+                text-decoration: none;
             }
         }
     }
